# Proyecto_gestor_de_-inventario

./: .gitignore  CMakeLists.txt  Doxyfile  Proyecto final ALSE-presentacion.pptx  README.md  gestor_inventario  gestor_inventario-journal  reporte_inventario_completo.html
docs/html/: Component_8cpp.html  Component_8cpp__incl.map  Component_8cpp__incl.md5  Component_8h.html  Component_8h__dep__incl.map  Component_8h__dep__incl.md5  Component_8h__incl.map  Component_8h__incl.md5  Component_8h_source.html  DatabaseManager_8cpp.html  DatabaseManager_8cpp.js  DatabaseManager_8cpp__incl.map  DatabaseManager_8cpp__incl.md5  DatabaseManager_8h.html  DatabaseManager_8h__dep__incl.map  DatabaseManager_8h__dep__incl.md5  DatabaseManager_8h__incl.map  DatabaseManager_8h__incl.md5  DatabaseManager_8h_source.html  InventoryManager_8cpp.html  InventoryManager_8cpp__incl.map  InventoryManager_8cpp__incl.md5  InventoryManager_8h.html  InventoryManager_8h__dep__incl.map  InventoryManager_8h__dep__incl.md5  InventoryManager_8h__incl.map  InventoryManager_8h__incl.md5  InventoryManager_8h_source.html  MainWindow_8cpp.html  MainWindow_8cpp__incl.map  MainWindow_8cpp__incl.md5  MainWindow_8h.html  MainWindow_8h__dep__incl.map  MainWindow_8h__dep__incl.md5  MainWindow_8h__incl.map  MainWindow_8h__incl.md5  MainWindow_8h_source.html  ReportGenerator_8cpp.html  ReportGenerator_8cpp__incl.map  ReportGenerator_8cpp__incl.md5  (+61 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+19 more)
src/: Component.cpp  Component.h  DatabaseManager.cpp  DatabaseManager.h  InventoryManager.cpp  InventoryManager.h  MainWindow.cpp  MainWindow.h  MainWindow.h.save  PDFGenerator.cpp  PDFGenerator.h  ReportGenerator.cpp  ReportGenerator.h  main.cpp  mainpage.dox
